--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,8 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.DemoApplication" parent="android:Theme.Material.Light.NoActionBar" >
+    <style name="Theme.DemoApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
         <item name="android:statusBarColor">@color/grey_50</item>
         <item name="android:windowLightStatusBar">true</item>
+    </style>
+    <color name="tab_unselect">@color/grey_900</color>
+
+    <style name="Theme.SplashActivity" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
+        <item name="windowActionBar">false</item>
+        <item name="android:windowNoTitle">true</item>
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:background">@color/splash_bg</item>
     </style>
 </resources>
