--- a/lib_base/src/main/res/layout/base_dialog_loading.xml
+++ b/lib_base/src/main/res/layout/base_dialog_loading.xml
@@ -2,11 +2,13 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    android:background="@drawable/base_loading_bg"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <com.airbnb.lottie.LottieAnimationView
         android:layout_width="120dp"
         android:layout_height="120dp"
+        android:layout_margin="20dp"
         app:lottie_autoPlay="true"
         app:lottie_fileName="lottie/lottie_loading.json"
         app:lottie_loop="true"/>
