--- a/lib_base/src/main/res/layout/base_adapter_header_layput.xml
+++ b/lib_base/src/main/res/layout/base_adapter_header_layput.xml
@@ -8,6 +8,7 @@
         android:id="@+id/lottie_view"
         android:layout_width="150dp"
         android:layout_height="150dp"
+        app:lottie_loop="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
