--- a/lib_home/src/main/res/layout/home_item_layout.xml
+++ b/lib_home/src/main/res/layout/home_item_layout.xml
@@ -1,18 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="60dp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    app:cardCornerRadius="10dp"
     android:layout_marginHorizontal="8dp"
-    android:layout_marginVertical="8dp"
-    android:elevation="2dp"
-    app:cardCornerRadius="12dp"
-    android:layout_height="60dp">
+    android:layout_marginVertical="8dp">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
-        android:gravity="center_vertical"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:gravity="center_vertical">
 
         <TextView
             android:id="@+id/tv_number"
@@ -21,7 +20,7 @@
             android:layout_marginStart="16dp"
             android:textSize="24sp"
             android:textStyle="bold"
-            tools:text="1"/>
+            tools:text="1" />
 
         <TextView
             android:id="@+id/tv_content"
@@ -29,6 +28,6 @@
             android:layout_height="wrap_content"
             android:paddingHorizontal="16dp"
             android:textSize="16sp"
-            tools:text="compose块布局"/>
+            tools:text="compose块布局" />
     </androidx.appcompat.widget.LinearLayoutCompat>
-</androidx.cardview.widget.CardView>
+</com.google.android.material.card.MaterialCardView>
