--- a/lib_square/src/main/res/layout/square_activity_job_time.xml
+++ b/lib_square/src/main/res/layout/square_activity_job_time.xml
@@ -17,11 +17,14 @@
 
     <Space
         android:layout_width="wrap_content"
-        android:layout_height="32dp" />
+        android:layout_height="52dp" />
 
     <com.google.android.material.card.MaterialCardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        app:strokeColor="#80666666"
+        app:strokeWidth="1dp"
+        android:elevation="2dp"
         android:layout_marginHorizontal="40dp"
         app:cardCornerRadius="8dp">
 
