--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.DemoApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
+    <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar" >
         <item name="android:statusBarColor">@color/grey_50</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
