--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <style name="Theme.DemoApplication" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
+    <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar" >
         <item name="android:statusBarColor">@color/grey_900</item>
     </style>
     <color name="tab_unselect">@color/grey_50</color>
