--- a/uilibrary/src/main/res/drawable/ui_bg_252525_border_1dp_r8.xml
+++ b/uilibrary/src/main/res/drawable/ui_bg_252525_border_1dp_r8.xml
@@ -2,6 +2,6 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
     <stroke
         android:width="1dp"
-        android:color="@color/base_252525" />
+        android:color="@color/color_252525" />
     <corners android:radius="8dp" />
 </shape>
