--- a/libHome/src/main/res/layout/home_activity_view_stub_test.xml
+++ b/libHome/src/main/res/layout/home_activity_view_stub_test.xml
@@ -9,7 +9,8 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:minHeight="120dp"
+        android:minHeight="100dp"
+        android:maxHeight="200dp"
         app:layout_constraintTop_toTopOf="parent">
 
         <ImageView
@@ -19,9 +20,9 @@
             android:layout_marginHorizontal="8dp"
             android:scaleType="centerCrop"
             app:layout_constraintBottom_toBottomOf="@+id/container"
-            app:layout_constraintDimensionRatio="1:1"
+            app:layout_constraintDimensionRatio="4:3"
             app:layout_constraintEnd_toStartOf="@+id/home_imageview"
-            app:layout_constraintHorizontal_bias="0.5"
+            app:layout_constraintHorizontal_bias="0.01"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/container"
             app:srcCompat="@mipmap/img1" />
@@ -32,14 +33,13 @@
             android:layout_height="0dp"
             android:layout_marginEnd="8dp"
             android:scaleType="centerCrop"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="@+id/home_imageview2"
             app:layout_constraintEnd_toStartOf="@+id/home_imageview3"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/home_imageview2"
             app:layout_constraintTop_toTopOf="@+id/home_imageview2"
-            app:srcCompat="@mipmap/img3"
-            tools:visibility="visible" />
+            app:srcCompat="@mipmap/img3" />
 
         <ImageView
             android:id="@+id/home_imageview3"
@@ -54,7 +54,6 @@
             app:layout_constraintStart_toEndOf="@+id/home_imageview"
             app:layout_constraintTop_toTopOf="@+id/home_imageview"
             app:srcCompat="@mipmap/img4" />
-
     </androidx.constraintlayout.widget.ConstraintLayout>
 
     <TextView
@@ -63,5 +62,4 @@
         android:layout_height="wrap_content"
         android:text="textView"
         app:layout_constraintTop_toBottomOf="@+id/container" />
-
 </androidx.constraintlayout.widget.ConstraintLayout>
