feat(lib_square): navigation修改

--- a/uilibrary/src/main/res/values/colors.xml
+++ b/uilibrary/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="color_translation">#00000000</color>
     <color name="color_252525">#252525</color>
+    <color name="primary">#FF6750A4</color>
 </resources>
