--- a/libHome/src/main/res/layout/home_bottom_sheet_dialog.xml
+++ b/libHome/src/main/res/layout/home_bottom_sheet_dialog.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/parent"
     android:layout_width="match_parent"
-    android:layout_height="450dp"
+    android:layout_height="wrap_content"
     android:background="@drawable/home_bottom_sheet_bg">
 
     <View
