--- a/libHome/src/main/res/layout/home_view_stub_headers.xml
+++ b/libHome/src/main/res/layout/home_view_stub_headers.xml
@@ -9,6 +9,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:maxHeight="200dp"
+        android:animateLayoutChanges="true"
         android:minHeight="100dp"
         app:layout_constraintTop_toTopOf="parent">
 
