--- a/uilibrary/src/main/res/layout/base_adapter_header_layput.xml
+++ b/uilibrary/src/main/res/layout/base_adapter_header_layput.xml
@@ -6,14 +6,14 @@
 
     <com.airbnb.lottie.LottieAnimationView
         android:id="@+id/lottie_view"
-        android:layout_width="150dp"
+        android:layout_width="match_parent"
         android:layout_height="150dp"
         app:lottie_loop="true"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="lottie/adapter_header.json" />
+        app:lottie_fileName="lottie/screen.json" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
