--- a/uilibrary/src/main/res/layout/base_custom_refresh.xml
+++ b/uilibrary/src/main/res/layout/base_custom_refresh.xml
@@ -2,14 +2,16 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
+    android:background="@color/white"
     android:layout_height="wrap_content"
     android:gravity="center">
 
     <com.airbnb.lottie.LottieAnimationView
+        android:id="@+id/lottie_refresh"
         android:layout_width="match_parent"
         android:layout_height="80dp"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="lottie/lottie_refresh.json"
+        app:lottie_fileName="lottie/lottie_refresh2.json"
         app:lottie_loop="true" />
 
 
