--- a/uilibrary/src/main/res/values/colors.xml
+++ b/uilibrary/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
     <color name="color_translation">#00000000</color>
     <color name="color_252525">#252525</color>
     <color name="primary">#FF6750A4</color>
+    <color name="white">#FFFFFFFF</color>
 </resources>
