--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -3,13 +3,15 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="@drawable/splash"
     android:orientation="vertical">
 
-    <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie"
-        app:lottie_autoPlay="true"
-        app:lottie_fileName="lottie/splash_screen.json"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent" />
+<!--    <com.airbnb.lottie.LottieAnimationView-->
+<!--        android:id="@+id/lottie"-->
+<!--        app:lottie_autoPlay="true"-->
+<!--        android:visibility="invisible"-->
+<!--        app:lottie_fileName="lottie/splash_screen.json"-->
+<!--        android:layout_width="match_parent"-->
+<!--        android:layout_height="match_parent" />-->
 
 </LinearLayout>
