--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar" >
+    <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/grey_50</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
+
     <color name="tab_unselect">@color/grey_900</color>
 
-    <style name="Theme.SplashActivity" parent="Theme.MaterialComponents.DayNight.NoActionBar" >
-
+    <style name="Theme.SplashActivity" parent="Theme.Material3.DayNight.NoActionBar">
+        <item name="android:windowFullscreen">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+        <item name="android:windowBackground">@drawable/splash</item>
     </style>
 </resources>
