--- a/libHome/src/main/res/layout/home_bottom_sheet_dialog.xml
+++ b/libHome/src/main/res/layout/home_bottom_sheet_dialog.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -38,8 +39,7 @@
         android:paddingBottom="16dp"
         android:text="展开"
         android:textColor="@color/base_252525"
-        android:textSize="18sp"
-        android:textStyle="bold"
+        android:textSize="16sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -62,7 +62,6 @@
         android:layout_height="250dp"
         app:curved="true"
         app:itemHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_button"
         app:layout_constraintEnd_toStartOf="@+id/picker_area"
         app:layout_constraintStart_toEndOf="@+id/picker_city"
         app:layout_constraintTop_toBottomOf="@+id/home_textview" />
@@ -74,7 +73,6 @@
         android:layout_marginHorizontal="16dp"
         app:curved="true"
         app:itemHeight="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/tv_button"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/picker_local"
         app:layout_constraintTop_toBottomOf="@+id/home_textview" />
@@ -84,14 +82,14 @@
         android:id="@+id/tv_button"
         android:layout_width="120dp"
         android:layout_height="60dp"
-        android:layout_marginBottom="20dp"
         android:shadowRadius="8"
         android:text="确定"
         android:textSize="18sp"
+        android:layout_marginTop="20dp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/picker_local" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
