--- a/uilibrary/src/main/res/layout/common_top_bar_layout.xml
+++ b/uilibrary/src/main/res/layout/common_top_bar_layout.xml
@@ -4,34 +4,42 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:elevation="10dp"
-    android:paddingHorizontal="16dp"
-    android:paddingTop="16dp"
-    android:paddingBottom="8dp">
+    android:orientation="vertical"
+    android:paddingTop="16dp">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingHorizontal="16dp"
+        android:paddingBottom="8dp">
 
-    <ImageView
-        android:id="@+id/btn_back"
-        android:layout_width="48dp"
-        android:layout_height="38dp"
-        android:paddingVertical="7dp"
-        android:src="@drawable/baseline_arrow_back_ios_24" />
+        <ImageView
+            android:id="@+id/btn_back"
+            android:layout_width="48dp"
+            android:layout_height="38dp"
+            android:paddingVertical="7dp"
+            android:src="@drawable/baseline_arrow_back_ios_24" />
 
-    <TextView
-        android:id="@+id/tv_title"
-        android:layout_width="0dp"
-        android:layout_height="match_parent"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        tools:text="标题" />
+        <TextView
+            android:id="@+id/tv_title"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:gravity="center"
+            android:textSize="18sp"
+            android:textStyle="bold"
+            tools:text="标题" />
 
-    <ImageView
-        android:id="@+id/btn_more"
-        android:layout_width="48dp"
-        android:layout_height="38dp"
-        android:visibility="invisible"
-        app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
+        <ImageView
+            android:id="@+id/btn_more"
+            android:layout_width="48dp"
+            android:layout_height="38dp"
+            android:visibility="invisible"
+            app:srcCompat="@drawable/baseline_arrow_back_ios_24" />
+    </LinearLayout>
 
+    <View
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:background="#0D252525" />
 </androidx.appcompat.widget.LinearLayoutCompat>
