--- a/libLogin/src/main/res/layout/login_activity_login.xml
+++ b/libLogin/src/main/res/layout/login_activity_login.xml
@@ -1,36 +1,37 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/motion_parent"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white"
-    app:layoutDescription="@xml/login_activity_login_scene">
+    android:orientation="vertical">
 
     <ImageView
         android:id="@+id/btn_close"
         android:layout_width="34dp"
         android:layout_height="34dp"
-        android:layout_marginStart="20dp"
+        android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:padding="5dp"
-        android:src="@drawable/baseline_close_24"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:src="@drawable/baseline_close_24" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/line_top"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.2" />
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="20dp" />
 
-    <androidx.constraintlayout.widget.Guideline
-        android:id="@+id/line_bottom"
-        android:layout_width="match_parent"
+    <TextView
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.8" />
+        android:layout_marginStart="20dp"
+        android:text="欢迎来到夜之城"
+        android:textColor="#333333"
+        android:textSize="25sp"
+        android:textStyle="bold" />
+
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="60dp" />
 
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout_account"
@@ -38,9 +39,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
-        android:hint="账号"
-        app:layout_constraintBottom_toTopOf="@+id/layout_password"
-        app:layout_constraintTop_toBottomOf="@+id/line_top">
+        android:hint="账号">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_account"
@@ -50,17 +49,17 @@
             android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
+    <Space
+        android:layout_width="wrap_content"
+        android:layout_height="20dp" />
+
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/layout_password"
         style="?attr/textInputOutlinedStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="40dp"
-        android:hint="密码"
-        app:layout_constraintBottom_toTopOf="@+id/btn_login"
-        app:layout_constraintEnd_toEndOf="@+id/layout_account"
-        app:layout_constraintStart_toStartOf="@+id/layout_account"
-        app:layout_constraintTop_toBottomOf="@+id/layout_account">
+        android:hint="密码">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/et_password"
@@ -70,43 +69,73 @@
             android:textSize="16sp" />
     </com.google.android.material.textfield.TextInputLayout>
 
-    <com.google.android.material.button.MaterialButton
-        android:id="@+id/btn_login"
-        style="?attr/materialButtonOutlinedStyle"
+    <Space
         android:layout_width="match_parent"
-        android:layout_height="60dp"
-        android:layout_marginHorizontal="20dp"
-        android:clickable="false"
-        android:paddingVertical="9dp"
-        app:layout_constraintBottom_toTopOf="@+id/line_bottom"
-        app:layout_constraintEnd_toEndOf="@+id/layout_password"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/layout_password" />
+        android:layout_height="40dp" />
 
-    <Button
-        android:id="@+id/login"
+    <androidx.constraintlayout.motion.widget.MotionLayout
+        android:id="@+id/motion_parent"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        app:layoutDescription="@xml/login_activity_login_scene">
+
+        <com.google.android.material.button.MaterialButton
+            android:id="@+id/btn_login"
+            style="?attr/materialButtonOutlinedStyle"
+            android:layout_width="match_parent"
+            android:layout_height="60dp"
+            android:clickable="false"
+            android:paddingVertical="9dp"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/login"
+            android:layout_width="wrap_content"
+            android:layout_height="56dp"
+            android:layout_marginStart="2dp"
+            android:clickable="false"
+            android:text="滑动登录"
+            android:textColor="#ffffff"
+            android:textSize="16sp"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
+            app:layout_constraintStart_toStartOf="@+id/btn_login"
+            app:layout_constraintTop_toTopOf="@+id/btn_login" />
+
+        <ProgressBar
+            android:id="@+id/loading_progress"
+            android:layout_width="54dp"
+            android:layout_height="54dp"
+            android:layout_marginVertical="2dp"
+            android:layout_marginEnd="2dp"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toBottomOf="@+id/btn_login"
+            app:layout_constraintEnd_toEndOf="@+id/btn_login"
+            app:layout_constraintTop_toTopOf="@+id/btn_login" />
+    </androidx.constraintlayout.motion.widget.MotionLayout>
+
+    <Space
         android:layout_width="wrap_content"
-        android:layout_height="56dp"
-        android:layout_marginStart="2dp"
-        android:clickable="false"
-        android:text="滑动登录"
-        android:textColor="#ffffff"
-        android:textSize="16sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
-        app:layout_constraintStart_toStartOf="@+id/btn_login"
-        app:layout_constraintTop_toTopOf="@+id/btn_login" />
+        android:layout_height="8dp" />
 
-    <ProgressBar
-        android:id="@+id/loading_progress"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
-        android:layout_marginVertical="2dp"
-        android:layout_marginEnd="2dp"
-        android:visibility="invisible"
-        app:layout_constraintBottom_toBottomOf="@+id/btn_login"
-        app:layout_constraintEnd_toEndOf="@+id/btn_login"
-        app:layout_constraintTop_toTopOf="@+id/btn_login" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp">
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+        <CheckBox
+            android:id="@+id/checked_privacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+        <TextView
+            android:id="@+id/tv_privacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#999999"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            tools:text="我已阅读并同意《用户协议》和《隐私政策》" />
+    </LinearLayout>
+</LinearLayout>
