--- a/lib_news/src/main/res/layout/news_rv_item_anim.xml
+++ b/lib_news/src/main/res/layout/news_rv_item_anim.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="65dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="16dp"
     android:layout_marginVertical="8dp"
     app:cardCornerRadius="10dp">
@@ -22,10 +23,11 @@
 
         <TextView
             android:id="@+id/tv_title"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:textSize="16sp"
             android:layout_weight="5"
+            tools:text="213123123"
             android:ellipsize="end"
             android:maxLines="1" />
     </androidx.appcompat.widget.LinearLayoutCompat>
